@@ -2,11 +2,6 @@
 
 Minimum required to replace leland_srvtab:
 
-* Add support to the test suite for specifying a different database than
-  SQLite for testing.  For MySQL and other database types that we can't
-  just delete, also requires adding a method to Wallet::Schema to drop all
-  of our tables and indices in reverse order of creation.
-
 * Write the remctl configuration and finish Debian packaging of the
   wallet client and server.
 
