@@ -15,10 +15,8 @@ use Wallet::ACL;
 use Wallet::Config;
 use Wallet::Server;
 
-# Use a local SQLite database for testing.
-$Wallet::Config::DB_DRIVER = 'SQLite';
-$Wallet::Config::DB_INFO = 'wallet-db';
-unlink 'wallet-db';
+use lib 't/lib';
+use Util;
 
 # Some global defaults to use.
 my $admin = 'admin@EXAMPLE.COM';
@@ -28,6 +26,7 @@ my $host = 'localhost';
 my @trace = ($admin, $host, time);
 
 # Use Wallet::Server to set up the database.
+db_setup;
 my $server = eval { Wallet::Server->initialize ($admin) };
 is ($@, '', 'Database initialization did not die');
 ok ($server->isa ('Wallet::Server'), ' and returned the right class');
