@@ -15,15 +15,8 @@ use Wallet::ACL::Krb5;
 use Wallet::ACL::NetDB;
 use Wallet::Config;
 
-# Returns the one-line contents of a file as a string, removing the newline.
-sub contents {
-    my ($file) = @_;
-    open (FILE, '<', $file) or die "cannot open $file: $!\n";
-    my $data = <FILE>;
-    close FILE;
-    chomp $data;
-    return $data;
-}
+use lib 't/lib';
+use Util;
 
 # Given a keytab file, try authenticating with kinit.
 sub getcreds {
